[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/fightTestScene/Battle.gd" type="Script" id=1]
[ext_resource path="res://Scripts/fightTestScene/TimerDisplay.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/orange kid stats.tres" type="DynamicFont" id=3]

[node name="Battle" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Question" type="Label" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 305.0
margin_bottom = 259.0
text = "This is a test Question"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerDisplay" type="Label" parent="."]
margin_left = 55.8615
margin_top = 172.534
margin_right = 662.861
margin_bottom = 511.534
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Self_HP" type="Label" parent="."]
margin_left = 20.1716
margin_top = 441.151
margin_right = 199.172
margin_bottom = 490.151
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy_HP" type="Label" parent="."]
margin_left = 588.313
margin_top = 440.528
margin_right = 759.313
margin_bottom = 496.528
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1" type="Button" parent="."]
margin_left = 79.9031
margin_top = 191.626
margin_right = 154.903
margin_bottom = 248.626
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2" type="Button" parent="."]
margin_left = 214.961
margin_top = 193.747
margin_right = 290.961
margin_bottom = 249.747
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer3" type="Button" parent="."]
margin_left = 76.3675
margin_top = 289.207
margin_right = 159.367
margin_bottom = 347.207
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer4" type="Button" parent="."]
margin_left = 214.253
margin_top = 289.914
margin_right = 293.253
margin_bottom = 351.914
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="Label" parent="."]
margin_left = 586.192
margin_top = 416.486
margin_right = 659.192
margin_bottom = 435.486
text = "Enemy HP :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Self" type="Label" parent="."]
margin_left = 63.6396
margin_top = 403.051
margin_right = 112.64
margin_bottom = 417.051
text = "My HP :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backbutton" type="Button" parent="."]
margin_left = 554.355
margin_top = 161.087
margin_right = 715.355
margin_bottom = 231.087
custom_fonts/font = ExtResource( 3 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Answer1" to="." method="_on_Answer1_pressed"]
[connection signal="pressed" from="Answer2" to="." method="_on_Answer2_pressed"]
[connection signal="pressed" from="Answer3" to="." method="_on_Answer3_pressed"]
[connection signal="pressed" from="Answer4" to="." method="_on_Answer4_pressed"]
[connection signal="pressed" from="backbutton" to="." method="_on_backbutton_pressed"]
